--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (0.2.7.5) stable; urgency=low
+
+  * Mantis 0000462: NFS options are incorrectly written to /etc/exports.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 16 May 2012 18:14:26 +0200
+
 openmediavault (0.2.7.4) stable; urgency=low
 
   * Mantis 0000459: Service FTP shares have wrong access privileges in
