--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (0.3.0.25) stable; urgency=low
 
   * Fix trigger issue.
+  * Mantis 0000595: Relayhost should be encapsulated in square brackets.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 09 Sep 2012 00:53:39 +0200
 
