--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault (0.3.0.26) stable; urgency=low
+
+  * Update mdadm.conf during system initialization to import existing
+    RAID arrays.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 14 Sep 2012 20:46:54 +0200
+
 openmediavault (0.3.0.25) stable; urgency=low
 
   * Fix trigger issue.
