--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/openmediavault-lvm2.pot
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/openmediavault-lvm2.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault-lvm2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-09-14 22:51+0200\n"
+"POT-Creation-Date: 2012-09-15 12:28+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -86,7 +86,7 @@ msgstr ""
 msgid "Name"
 msgstr ""
 
-msgid "No free space available to create the logical volume."
+msgid "No free space available to create a logical volume."
 msgstr ""
 
 msgid "No free space available to extend the logical volume."
