--- a/deb/openmediavault-lvm2/debian/changelog
+++ b/deb/openmediavault-lvm2/debian/changelog
@@ -1,9 +1,15 @@
+openmediavault-lvm2 (0.3.0.12) stable; urgency=low
+
+  * Mantis 0000605: Cannot resize LVM Logical Volume.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 19 Sep 2012 13:09:37 +0200
+
 openmediavault-lvm2 (0.3.0.11) stable; urgency=low
 
   * Update locales.
   * Modify RPC to create/extend a logical volume.
 
- -- vot <vot@genesis>  Fri, 14 Sep 2012 13:34:52 +0200
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 14 Sep 2012 13:34:52 +0200
 
 openmediavault-lvm2 (0.3.0.10) stable; urgency=low
 
