--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault (0.3.1) stable; urgency=low
+
+  * Update locales.
+  * Various bug fixes.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 02 Oct 2012 21:53:33 +0200
+
 openmediavault (0.3.0.26) stable; urgency=low
 
   * Update mdadm.conf during system initialization to import existing
