--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (0.3.5) stable; urgency=low
+
+  * Fix bug in the configuration init/sync script.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Tue, 06 Nov 2012 20:53:59 +0100
+
 openmediavault (0.3.4) stable; urgency=low
 
   * Update locales.
