--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,11 @@
+openmediavault (0.3.6) stable; urgency=low
+
+  * Mantis 0000651: Rsync job recursive parameter not working correctly.
+  * Mantis 0000652: Rsync job that is disabled can't be run although it
+    looks as if it can.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 19 Nov 2012 19:23:36 +0100
+
 openmediavault (0.3.5.1) stable; urgency=low
 
   * Mantis 0000644: Hostname is not updated.
