--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault (0.4.6) stable; urgency=low
+
+  * Update locales.
+  * Mantis 0000660: Cannot delete SSL certs in WebGUI.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 28 Nov 2012 19:23:24 +0100
+
 openmediavault (0.4.5) stable; urgency=low
 
   * Update locales.
