--- a/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
@@ -3,6 +3,7 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+#   <bejonwe@gmx.net>, 2012.
 # Marcel Beck <fo3nik5@gmail.com>, 2012.
 #   <mattjes04@googlemail.com>, 2012.
 # Volker  <votdev@gmx.de>, 2012.
@@ -13,8 +14,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-19 20:12+0100\n"
-"PO-Revision-Date: 2012-11-19 19:12+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2012-11-21 14:33+0000\n"
+"Last-Translator: bejonwe <bejonwe@gmx.net>\n"
 "Language-Team: German (http://www.transifex.com/projects/p/openmediavault/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1043,7 +1044,7 @@ msgstr "Aktivere Ident Protokoll (RFC1413)"
 msgid ""
 "Enable this option to keep partially transferred files, otherwise they will "
 "be deleted if the transfer is interrupted."
-msgstr ""
+msgstr "Aktivieren, wenn nur teilweise übertragene Dateien behalten werden sollen, andernfalls werden diese gelöscht."
 
 msgid "Enable user authentication"
 msgstr "Aktiviere Benutzerauthentifizierung"
@@ -1541,7 +1542,7 @@ msgid "Kazakhstan"
 msgstr "Kasachstan"
 
 msgid "Keep partially transferred files"
-msgstr ""
+msgstr "Teilweise übertragene Dateien behalten"
 
 msgid "Kenya"
 msgstr "Kenia"
