Mantis 0000662: Physical Drive - Advanced Power Management - Value 255.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -2,6 +2,7 @@ openmediavault (0.4.6) stable; urgency=low
 
   * Update locales.
   * Mantis 0000660: Cannot delete SSL certs in WebGUI.
+  * Mantis 0000662: Physical Drive - Advanced Power Management - Value 255.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Wed, 28 Nov 2012 19:23:24 +0100
 
