--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (0.3.7.1) stable; urgency=low
+
+  * Rename omv-dist-upgrade to omv-release-upgrade.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Mon, 03 Dec 2012 17:48:04 +0100
+
 openmediavault (0.3.7) stable; urgency=low
 
   * Add omv-dist-upgrade command to easily upgrade to the latest release
