--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (0.4.7) stable; urgency=low
+
+  * Add chinese translations. Thanks to Kochin Chang.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Wed, 05 Dec 2012 18:47:04 +0100
+
 openmediavault (0.4.6) stable; urgency=low
 
   * Update locales.
