--- a/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/de_DE/openmediavault.po
@@ -14,7 +14,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-30 20:58+0100\n"
-"PO-Revision-Date: 2012-11-30 19:54+0000\n"
+"PO-Revision-Date: 2012-11-30 20:05+0000\n"
 "Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: German (http://www.transifex.com/projects/p/openmediavault/language/de/)\n"
 "MIME-Version: 1.0\n"
@@ -105,7 +105,7 @@ msgid "254 - Maximum performance, maximum power usage"
 msgstr "254 - Maximale Leistung, maximaler Energieverbrauch"
 
 msgid "255 - Disabled"
-msgstr ""
+msgstr "255 - Deaktiviert"
 
 msgid "3 days"
 msgstr "3 Tage"
