--- a/deb/openmediavault/usr/share/openmediavault/locale/no_NO/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/no_NO/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-30 20:58+0100\n"
-"PO-Revision-Date: 2012-11-30 19:52+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2012-12-08 11:08+0000\n"
+"Last-Translator: runesudden <runesudden@gmail.com>\n"
 "Language-Team: Norwegian (http://www.transifex.com/projects/p/openmediavault/language/no/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -100,7 +100,7 @@ msgid "254 - Maximum performance, maximum power usage"
 msgstr "254 - Maksimal ytelse, maksimalt strømforbruk"
 
 msgid "255 - Disabled"
-msgstr ""
+msgstr "255 - Deaktivert"
 
 msgid "3 days"
 msgstr "3 dager"
@@ -461,7 +461,7 @@ msgid "Bond options"
 msgstr "Knytningsalternativer"
 
 msgid "Boot"
-msgstr ""
+msgstr "Oppstart"
 
 msgid "Bosnia and Herzegovina"
 msgstr "Bosnia-Hercegovina"
@@ -1035,7 +1035,7 @@ msgstr "Aktiver ident protokoll (RFC1413)"
 msgid ""
 "Enable this option to keep partially transferred files, otherwise they will "
 "be deleted if the transfer is interrupted."
-msgstr ""
+msgstr "Aktiver dette alternativet for å beholde delvis overførte filer, ellers vil de bli slettet hvis overføringen blir avbrutt."
 
 msgid "Enable user authentication"
 msgstr "Aktiver brukerautentisering"
@@ -1525,7 +1525,7 @@ msgid "Kazakhstan"
 msgstr "Kasakhstan"
 
 msgid "Keep partially transferred files"
-msgstr ""
+msgstr "Beholde delvis overførte filer"
 
 msgid "Kenya"
 msgstr "Kenya"
@@ -2068,7 +2068,7 @@ msgid "People's Democratic Republic of Yemen"
 msgstr "Sør-Jemen"
 
 msgid "Perform a trial run with no changes made"
-msgstr ""
+msgstr "Kjør en test uten at noen faktiske endringer blir skrevet"
 
 msgid "Period of validity"
 msgstr "Gyldighetsperiode"
@@ -2142,7 +2142,7 @@ msgid ""
 msgstr "Vennligst sjekk <a href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' target='_blank'>brukermanualen</a> for flere detaljer."
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
-msgstr ""
+msgstr "Velg en metode for å rense enheten eller 'Avbryt' for å avbryte."
 
 msgid "Please first select a volume."
 msgstr "Velg først et volum."
@@ -2253,7 +2253,7 @@ msgid "Qatar"
 msgstr "Qatar"
 
 msgid "Quick"
-msgstr ""
+msgstr "Hurtig"
 
 msgid "Quiet"
 msgstr "Stille"
@@ -2491,7 +2491,7 @@ msgid "Seconds"
 msgstr "Sekunder"
 
 msgid "Secure"
-msgstr ""
+msgstr "Sikker"
 
 msgid "Secure connection"
 msgstr "Sikker tikobling"
@@ -3228,7 +3228,7 @@ msgid "Treshold"
 msgstr "Terskel"
 
 msgid "Trial run"
-msgstr ""
+msgstr "Testkjøring"
 
 msgid "Trinidad and Tobago"
 msgstr "Trinidad og Tobago"
