--- a/deb/openmediavault/usr/share/openmediavault/locale/fr_FR/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/fr_FR/openmediavault.po
@@ -12,8 +12,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-30 20:58+0100\n"
-"PO-Revision-Date: 2012-11-30 19:51+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2012-12-11 13:31+0000\n"
+"Last-Translator: Stéphane BOCQUET <sbocquet4772@gmail.com>\n"
 "Language-Team: French (France) (http://www.transifex.com/projects/p/openmediavault/language/fr_FR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -103,7 +103,7 @@ msgid "254 - Maximum performance, maximum power usage"
 msgstr "254 - Performance maximale, consommation maximale"
 
 msgid "255 - Disabled"
-msgstr ""
+msgstr "255 - Désactivé"
 
 msgid "3 days"
 msgstr "3 jours"
@@ -464,7 +464,7 @@ msgid "Bond options"
 msgstr "Options de liaison"
 
 msgid "Boot"
-msgstr ""
+msgstr "Boot"
 
 msgid "Bosnia and Herzegovina"
 msgstr "Bosnie-Herzégovine"
@@ -1038,7 +1038,7 @@ msgstr "Activer le protocole Ident (RFC1413)"
 msgid ""
 "Enable this option to keep partially transferred files, otherwise they will "
 "be deleted if the transfer is interrupted."
-msgstr ""
+msgstr "Activer cette option pour conserver les fichiers partiellement transférés, sinon ils seront supprimés si le transfert est interrompu."
 
 msgid "Enable user authentication"
 msgstr "Activer l'authentification des utilisateurs"
@@ -1528,7 +1528,7 @@ msgid "Kazakhstan"
 msgstr "Kazakhstan"
 
 msgid "Keep partially transferred files"
-msgstr ""
+msgstr "Garde les fichiers partiellement transférés"
 
 msgid "Kenya"
 msgstr "Kenya"
@@ -2071,7 +2071,7 @@ msgid "People's Democratic Republic of Yemen"
 msgstr "Yémen"
 
 msgid "Perform a trial run with no changes made"
-msgstr ""
+msgstr "Effectue un essai sans aucun changement"
 
 msgid "Period of validity"
 msgstr "Validité"
@@ -2145,7 +2145,7 @@ msgid ""
 msgstr "Voir la <a href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' target='_blank'>page d'aide</a> pour plus de détails."
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
-msgstr ""
+msgstr "Choisir la méthode pour nettoyer le périphérique ou sur 'Annuler' pour abandonner."
 
 msgid "Please first select a volume."
 msgstr "Sélectionnez un volume en premier."
@@ -2256,7 +2256,7 @@ msgid "Qatar"
 msgstr "Qatar"
 
 msgid "Quick"
-msgstr ""
+msgstr "Rapide"
 
 msgid "Quiet"
 msgstr "Silence"
@@ -2494,7 +2494,7 @@ msgid "Seconds"
 msgstr "Secondes"
 
 msgid "Secure"
-msgstr ""
+msgstr "Sécurisé"
 
 msgid "Secure connection"
 msgstr "Connections sécurisées"
@@ -3231,7 +3231,7 @@ msgid "Treshold"
 msgstr "Seuil"
 
 msgid "Trial run"
-msgstr ""
+msgstr "Essai"
 
 msgid "Trinidad and Tobago"
 msgstr "Trinité-et-Tobago"
