--- a/deb/openmediavault/usr/share/openmediavault/locale/pt_PT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/pt_PT/openmediavault.po
@@ -10,8 +10,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-30 20:58+0100\n"
-"PO-Revision-Date: 2012-11-30 19:51+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2012-12-09 18:53+0000\n"
+"Last-Translator: Nelson Rosado <nelsontrosado@gmail.com>\n"
 "Language-Team: Portuguese (Portugal) (http://www.transifex.com/projects/p/openmediavault/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -101,7 +101,7 @@ msgid "254 - Maximum performance, maximum power usage"
 msgstr "254 - Performance máxima, máximo consumo de energia"
 
 msgid "255 - Disabled"
-msgstr ""
+msgstr "255 - Desactivado"
 
 msgid "3 days"
 msgstr "3 dias"
@@ -462,7 +462,7 @@ msgid "Bond options"
 msgstr "Opções de vinculo"
 
 msgid "Boot"
-msgstr ""
+msgstr "Arranque"
 
 msgid "Bosnia and Herzegovina"
 msgstr "Bosnia e Herzegovina"
@@ -2254,7 +2254,7 @@ msgid "Qatar"
 msgstr "Qatar"
 
 msgid "Quick"
-msgstr ""
+msgstr "Rápido"
 
 msgid "Quiet"
 msgstr "Silêncio"
@@ -2492,7 +2492,7 @@ msgid "Seconds"
 msgstr "Segundos"
 
 msgid "Secure"
-msgstr ""
+msgstr "Seguro"
 
 msgid "Secure connection"
 msgstr "Ligação segura"
