--- a/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/es_ES/openmediavault.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-30 20:58+0100\n"
-"PO-Revision-Date: 2012-11-30 19:54+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2012-12-10 06:49+0000\n"
+"Last-Translator: Raul Fernandez Garcia <raulfg3@gmail.com>\n"
 "Language-Team: Spanish (Spain) (http://www.transifex.com/projects/p/openmediavault/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -102,7 +102,7 @@ msgid "254 - Maximum performance, maximum power usage"
 msgstr "254 - Máximo rendimiento, máximo consumo"
 
 msgid "255 - Disabled"
-msgstr ""
+msgstr "255 - Deshabilitado"
 
 msgid "3 days"
 msgstr "3 días"
@@ -1037,7 +1037,7 @@ msgstr "Habilitar el protocolo de Identificación (RFC1413)"
 msgid ""
 "Enable this option to keep partially transferred files, otherwise they will "
 "be deleted if the transfer is interrupted."
-msgstr ""
+msgstr "Habilite está opción pra mantener los archivos parcialmente transferidos, si no , serán borrados en caso de interrumpirse la transmisión."
 
 msgid "Enable user authentication"
 msgstr "Habilitar la autenticación de usuarios"
@@ -1527,7 +1527,7 @@ msgid "Kazakhstan"
 msgstr "Kazajstán"
 
 msgid "Keep partially transferred files"
-msgstr ""
+msgstr "Mantener los archivos parcialmente transferidos"
 
 msgid "Kenya"
 msgstr "Kenia"
