--- a/deb/openmediavault-nut/debian/changelog
+++ b/deb/openmediavault-nut/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-nut (0.4.1) stable; urgency=low
+
+  * Update locales.
+  * Add chinese translations. Thanks to Kochin Chang.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 21 Dec 2012 14:25:47 +0100
+
 openmediavault-nut (0.4) stable; urgency=low
 
   * Upgrade to xmlstarlet 1.3.1.
