* Update locales. * Add chinese translations. Thanks to Kochin Chang.

--- a/deb/openmediavault/usr/share/openmediavault/locale/sv_SV/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/sv_SV/openmediavault.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-30 20:58+0100\n"
-"PO-Revision-Date: 2012-11-30 19:55+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2012-12-13 18:36+0000\n"
+"Last-Translator: Henrik Sandström <henrik.sandstroem@gmail.com>\n"
 "Language-Team: Swedish (http://www.transifex.com/projects/p/openmediavault/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -100,7 +100,7 @@ msgid "254 - Maximum performance, maximum power usage"
 msgstr "254 - Maximal prestanda, maximal strömförbrukning"
 
 msgid "255 - Disabled"
-msgstr ""
+msgstr "255 - Inaktiverad"
 
 msgid "3 days"
 msgstr "3 dagar"
@@ -461,7 +461,7 @@ msgid "Bond options"
 msgstr "Band-inställningar"
 
 msgid "Boot"
-msgstr ""
+msgstr "Boot"
 
 msgid "Bosnia and Herzegovina"
 msgstr "Bosnien och Hercegovina"
@@ -1035,7 +1035,7 @@ msgstr "Aktivera \"ident\"-protokollet (RFC1413)"
 msgid ""
 "Enable this option to keep partially transferred files, otherwise they will "
 "be deleted if the transfer is interrupted."
-msgstr ""
+msgstr "Aktivera det här alternativet för att behålla delvis överförda filer, annars kommer de att tas bort om överföringen stannar."
 
 msgid "Enable user authentication"
 msgstr "Aktivera autentisering för användare"
@@ -1525,7 +1525,7 @@ msgid "Kazakhstan"
 msgstr "Kazakstan"
 
 msgid "Keep partially transferred files"
-msgstr ""
+msgstr "Behåll delvis överförda filer"
 
 msgid "Kenya"
 msgstr "Kenya"
@@ -2068,7 +2068,7 @@ msgid "People's Democratic Republic of Yemen"
 msgstr "Demokratiska folkrepubliken Jemen"
 
 msgid "Perform a trial run with no changes made"
-msgstr ""
+msgstr "Genomför ett test utan att spara"
 
 msgid "Period of validity"
 msgstr "Giltighetstid"
@@ -2142,7 +2142,7 @@ msgid ""
 msgstr "Kontrollera <a href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' target='_blank'>manualsidan</a> för mer information."
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
-msgstr ""
+msgstr "Välj en metod för att radera enheten eller välj 'Avbryt' "
 
 msgid "Please first select a volume."
 msgstr "Välj först en volym."
@@ -2253,7 +2253,7 @@ msgid "Qatar"
 msgstr "Qatar"
 
 msgid "Quick"
-msgstr ""
+msgstr "Snabb"
 
 msgid "Quiet"
 msgstr "Tyst"
@@ -2491,7 +2491,7 @@ msgid "Seconds"
 msgstr "Sekunder"
 
 msgid "Secure"
-msgstr ""
+msgstr "Säker"
 
 msgid "Secure connection"
 msgstr "Säker anslutning"
@@ -3228,7 +3228,7 @@ msgid "Treshold"
 msgstr "Tröskelvärde"
 
 msgid "Trial run"
-msgstr ""
+msgstr "Testkörning"
 
 msgid "Trinidad and Tobago"
 msgstr "Trinidad och Tobago"
@@ -3536,4 +3536,4 @@ msgid "seconds"
 msgstr "sekunder"
 
 msgid "web administration interface"
-msgstr ""
+msgstr "Gränssnitt för webbadministration"
