--- a/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
@@ -5,14 +5,15 @@
 # Translators:
 # Mario Varelli <mvarelli@biologia.unipi.it>, 2012.
 #   <mauro.rulli@gmail.com>, 2012.
+# Mauro Rulli <mauro.rulli@gmail.com>, 2012.
 #   <mvarelli@biologia.unipi.it>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-11-30 20:58+0100\n"
-"PO-Revision-Date: 2012-11-30 19:52+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2012-12-17 15:06+0000\n"
+"Last-Translator: Mauro Rulli <mauro.rulli@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/projects/p/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -102,7 +103,7 @@ msgid "254 - Maximum performance, maximum power usage"
 msgstr "254 - Prestazioni elevate, consumo di energia massimo"
 
 msgid "255 - Disabled"
-msgstr ""
+msgstr "255 - Disabilitato"
 
 msgid "3 days"
 msgstr "3 giorni"
@@ -463,7 +464,7 @@ msgid "Bond options"
 msgstr "Opzioni di aggregazione"
 
 msgid "Boot"
-msgstr ""
+msgstr "Avvio"
 
 msgid "Bosnia and Herzegovina"
 msgstr "Bosnia ed Erzegovina"
@@ -1037,7 +1038,7 @@ msgstr "Abilita il protocollo di identificazione (RFC1413)"
 msgid ""
 "Enable this option to keep partially transferred files, otherwise they will "
 "be deleted if the transfer is interrupted."
-msgstr ""
+msgstr "Abilita questa opzione per mantenere i file parzialmente trasferiti, altrimenti verranno eliminati se il trasferimento sarà interrotto."
 
 msgid "Enable user authentication"
 msgstr "Abilita l'autenticazione utente"
@@ -1527,7 +1528,7 @@ msgid "Kazakhstan"
 msgstr "Kazakistan"
 
 msgid "Keep partially transferred files"
-msgstr ""
+msgstr "Mantieni i file parzialmente trasferiti"
 
 msgid "Kenya"
 msgstr "Kenya"
@@ -2070,7 +2071,7 @@ msgid "People's Democratic Republic of Yemen"
 msgstr "Repubblica Democratica Popolare dello Yemen (Yemen del Sud)"
 
 msgid "Perform a trial run with no changes made"
-msgstr ""
+msgstr "Esegue un'esecuzione di prova senza apportare cambiamenti"
 
 msgid "Period of validity"
 msgstr "Periodo di validità"
@@ -2144,7 +2145,7 @@ msgid ""
 msgstr "Si prega di verificare la <a href='http://www.samba.org/samba/docs/man/manpages-3/smb.conf.5.html' target='_blank'>pagina del manuale</a> per maggiori dettagli."
 
 msgid "Please choose the method to wipe the device or 'Cancel' to abort."
-msgstr ""
+msgstr "Per favore scegli il metodo per il ripristino del dispositivo o 'Annulla' per annullare."
 
 msgid "Please first select a volume."
 msgstr "Per favore seleziona prima un volume."
@@ -2255,7 +2256,7 @@ msgid "Qatar"
 msgstr "Qatar"
 
 msgid "Quick"
-msgstr ""
+msgstr "Rapido"
 
 msgid "Quiet"
 msgstr "Silenzioso"
@@ -2493,7 +2494,7 @@ msgid "Seconds"
 msgstr "Secondi"
 
 msgid "Secure"
-msgstr ""
+msgstr "Sicuro"
 
 msgid "Secure connection"
 msgstr "Connessione sicura"
@@ -3230,7 +3231,7 @@ msgid "Treshold"
 msgstr "Soglia"
 
 msgid "Trial run"
-msgstr ""
+msgstr "Esecuzione di prova"
 
 msgid "Trinidad and Tobago"
 msgstr "Trinidad e Tobago"
@@ -3538,4 +3539,4 @@ msgid "seconds"
 msgstr "secondi"
 
 msgid "web administration interface"
-msgstr ""
+msgstr "Interfaccia web di amministrazione"
