--- a/deb/openmediavault/usr/share/openmediavault/locale/sv_SV/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/sv_SV/openmediavault.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-11-30 20:58+0100\n"
-"PO-Revision-Date: 2012-12-13 18:36+0000\n"
-"Last-Translator: Henrik Sandström <henrik.sandstroem@gmail.com>\n"
+"POT-Creation-Date: 2012-12-22 03:12+0100\n"
+"PO-Revision-Date: 2012-12-22 02:12+0000\n"
+"Last-Translator: Volker <votdev@gmx.de>\n"
 "Language-Team: Swedish (http://www.transifex.com/projects/p/openmediavault/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -735,6 +735,9 @@ msgstr "Radera"
 msgid "Delete content"
 msgstr "Radera innehåll"
 
+msgid "Delete files"
+msgstr ""
+
 msgid "Delete files on the receiving side that don't exist on sender"
 msgstr "Radera "
 
@@ -1154,6 +1157,16 @@ msgstr "Fiji"
 
 msgid "File"
 msgstr "Fil"
+
+msgid ""
+"Files in the recycle bin will be deleted automatically after the specified "
+"number of days. Set to 0 for manual deletion."
+msgstr ""
+
+msgid ""
+"Files that are larger than the specified number of bytes will not be put "
+"into the recycle bin. Set to 0 for unrestricted file size."
+msgstr ""
 
 msgid "Filesystem"
 msgstr "Filsystem"
@@ -1724,6 +1737,9 @@ msgstr "Max. loginförsök"
 
 msgid "Maximum download rate (KiB/s)"
 msgstr "Maximal nedladdningshastighet (KiB/s)"
+
+msgid "Maximum file size"
+msgstr ""
 
 msgid ""
 "Maximum idle time in seconds. Setting idle timeout to 0 disables the idle "
