* Update locales. * Improve LVM code.

--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/da_DA/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/da_DA/openmediavault-lvm2.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-15 12:28+0200\n"
-"PO-Revision-Date: 2012-09-15 15:36+0000\n"
+"PO-Revision-Date: 2012-12-03 13:57+0000\n"
 "Last-Translator: Stefan Thrane Overby <stoverby@gmail.com>\n"
 "Language-Team: Danish (http://www.transifex.com/projects/p/openmediavault/language/da/)\n"
 "MIME-Version: 1.0\n"
@@ -90,7 +90,7 @@ msgid "Name"
 msgstr "Navn"
 
 msgid "No free space available to create a logical volume."
-msgstr "Der er ingen ledig plads tilgængelig for opretning af et logisk drev."
+msgstr "Der er ingen ledig plads tilgængelig for oprettelse af et logisk drev."
 
 msgid "No free space available to extend the logical volume."
 msgstr "Der er ingen ledig plads tilgængelig for udvidelse af det logiske drev."
