--- a/deb/openmediavault-lvm2/debian/changelog
+++ b/deb/openmediavault-lvm2/debian/changelog
@@ -1,3 +1,10 @@
+openmediavault-lvm2 (0.4.1) stable; urgency=low
+
+  * Improve code.
+  * Update locales.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sun, 23 Dec 2012 16:03:19 +0100
+
 openmediavault-lvm2 (0.4) stable; urgency=low
 
   * Upgrade to xmlstarlet 1.3.1.
