--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/it_IT/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/it_IT/openmediavault-lvm2.po
@@ -4,13 +4,14 @@
 # 
 # Translators:
 #   <mauro.rulli@gmail.com>, 2012.
+# Mauro Rulli <mauro.rulli@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-15 12:28+0200\n"
-"PO-Revision-Date: 2012-09-15 10:29+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2012-12-17 15:08+0000\n"
+"Last-Translator: Mauro Rulli <mauro.rulli@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/projects/p/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -33,7 +34,7 @@ msgid "Confirmation"
 msgstr "Conferma"
 
 msgid "Create"
-msgstr ""
+msgstr "Crea"
 
 msgid "Create logical volume"
 msgstr "Crea volume logico"
@@ -90,10 +91,10 @@ msgid "Name"
 msgstr "Nome"
 
 msgid "No free space available to create a logical volume."
-msgstr ""
+msgstr "Spazio libero non disponibile per creare un volume logico."
 
 msgid "No free space available to extend the logical volume."
-msgstr ""
+msgstr "Spazio libero non disponibile per estendere il volume logico."
 
 msgid "Physical volumes"
 msgstr "Volumi fisici"
