--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/no_NO/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/no_NO/openmediavault-lvm2.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-15 12:28+0200\n"
-"PO-Revision-Date: 2012-09-15 10:29+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2012-10-25 15:28+0000\n"
+"Last-Translator: runesudden <runesudden@gmail.com>\n"
 "Language-Team: Norwegian (http://www.transifex.com/projects/p/openmediavault/language/no/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -33,7 +33,7 @@ msgid "Confirmation"
 msgstr "Bekreftelse"
 
 msgid "Create"
-msgstr ""
+msgstr "Opprett"
 
 msgid "Create logical volume"
 msgstr "Lag logisk volum"
@@ -90,10 +90,10 @@ msgid "Name"
 msgstr "Navn"
 
 msgid "No free space available to create a logical volume."
-msgstr ""
+msgstr "Ingen ledig plass tilgjengelig for å lage et logisk volum."
 
 msgid "No free space available to extend the logical volume."
-msgstr ""
+msgstr "Ingen ledig plass tilgjengelig for å utvide det logiske volumet."
 
 msgid "Physical volumes"
 msgstr "Fysiske volum"
