--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/pt_PT/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/pt_PT/openmediavault-lvm2.po
@@ -3,14 +3,15 @@
 # This file is distributed under the same license as the PACKAGE package.
 # 
 # Translators:
+# Nelson Rosado <nelsontrosado@gmail.com>, 2012.
 #   <nelsontrosado@gmail.com>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-15 12:28+0200\n"
-"PO-Revision-Date: 2012-09-15 10:29+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2012-09-25 11:29+0000\n"
+"Last-Translator: Nelson Rosado <nelsontrosado@gmail.com>\n"
 "Language-Team: Portuguese (Portugal) (http://www.transifex.com/projects/p/openmediavault/language/pt_PT/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -33,7 +34,7 @@ msgid "Confirmation"
 msgstr "Confirmação"
 
 msgid "Create"
-msgstr ""
+msgstr "Criar"
 
 msgid "Create logical volume"
 msgstr "Criar volume lógico"
@@ -90,10 +91,10 @@ msgid "Name"
 msgstr "Nome"
 
 msgid "No free space available to create a logical volume."
-msgstr ""
+msgstr "Não há espaço livre disponível para criar o volume lógico."
 
 msgid "No free space available to extend the logical volume."
-msgstr ""
+msgstr "Não há espaço livre disponível para estender o volume lógico."
 
 msgid "Physical volumes"
 msgstr "Volumes físicos"
