--- a/deb/openmediavault-lvm2/usr/share/openmediavault/locale/tr_TR/openmediavault-lvm2.po
+++ b/deb/openmediavault-lvm2/usr/share/openmediavault/locale/tr_TR/openmediavault-lvm2.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-15 12:28+0200\n"
-"PO-Revision-Date: 2012-09-15 10:29+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2012-10-09 17:12+0000\n"
+"Last-Translator: Serhat SUT <serhat.sut@gmail.com>\n"
 "Language-Team: Turkish (Turkey) (http://www.transifex.com/projects/p/openmediavault/language/tr_TR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -33,7 +33,7 @@ msgid "Confirmation"
 msgstr "Onaylama"
 
 msgid "Create"
-msgstr ""
+msgstr "Oluştur"
 
 msgid "Create logical volume"
 msgstr "Mantıksal bölüm oluştur"
@@ -90,10 +90,10 @@ msgid "Name"
 msgstr "İsim"
 
 msgid "No free space available to create a logical volume."
-msgstr ""
+msgstr "Mantıksal bölüm oluşturmak için yeterli boş alan yok."
 
 msgid "No free space available to extend the logical volume."
-msgstr ""
+msgstr "Mantıksal bölümü genişletmek için yeterli boş alan yok."
 
 msgid "Physical volumes"
 msgstr "Fiziksel bölümler"
