Mantis 0000677: A bit more functional network recycle bin.

--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -4,6 +4,7 @@ openmediavault (0.4.9) stable; urgency=low
   * Mantis 0000676: Provide a way to change average system load thresholds
     for notifications. Alert notifications can be disabled via the environment
     variables OMV_MONIT_SERVICE_SYSTEM_(MEMORYUSAGE|CPUUSAGE|LOADAVG)_ENABLE.
+  * Mantis 0000677: A bit more functional network recycle bin.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Sun, 23 Dec 2012 22:20:57 +0100
 
