--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,11 @@
+openmediavault (0.4.12) stable; urgency=low
+
+  * Reconfigure smartmontools configuration if email notification settings
+    has been modified.
+  * Make gateway field in the bond interface configuration dialogs optional.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Fri, 04 Jan 2013 04:58:32 +0100
+
 openmediavault (0.4.11) stable; urgency=low
 
   * Fix issue related to Mantis 0000679.
